--- a/voting/templates/base.html
+++ b/voting/templates/base.html
@@ -12,7 +12,7 @@
             background-color: #f8f9fa;
         }
         .navbar {
-            background-color: #0d6efd;
+            background-color: #8DC63F;
         }
         .navbar-brand, .nav-link {
             color: white !important;
