--- a/voting/templates/voting/base.html
+++ b/voting/templates/voting/base.html
@@ -9,10 +9,10 @@
     <!-- Custom CSS -->
     <style>
         body {
-            background-color: #f8f9fa;
+            background-color: gray;
         }
         .navbar {
-            background-color: #0d6efd;
+            background-color: #8DC63F;
         }
         .navbar-brand, .nav-link {
             color: white !important;
